--- a/IK_Scans/IK_experiments.ipynb
+++ b/IK_Scans/IK_experiments.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,10 +401,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.   0.  -9. -14. -14.   0.]\n",
+      " [  0.   0.  -8. -14. -14.   0.]\n",
+      " [  0.   0.  -7. -14. -14.   0.]\n",
+      " [  0.   0.  -6. -14. -14.   0.]\n",
+      " [  0.   0.  -5. -14. -14.   0.]]\n",
+      "[[1 1 1 1]\n",
+      " [2 2 2 2]\n",
+      " [3 3 3 3]\n",
+      " [4 4 4 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "(x0,x1) = (0,0)\n",
+    "(y0,y1) = (0,0)\n",
+    "(z0,z1) = (-9,9)\n",
+    "(Rx0,Rx1) = (-14,14)\n",
+    "(Ry0,Ry1) = (-14,14)\n",
+    "(Rz0,Rz1) = (0,0)\n",
+    "\n",
+    "res=(1,2)\n",
+    "\n",
+    "all_points = np.mgrid[\n",
+    "            x0:x1:(int((x1-x0)/res[0])+1)*1j,\n",
+    "            y0:y1:(int((y1-y0)/res[0])+1)*1j,\n",
+    "            z0:z1:(int((z1-z0)/res[0])+1)*1j,\n",
+    "            Rx0:Rx1:(int((Rx1-Rx0)/res[1])+1)*1j,\n",
+    "            Ry0:Ry1:(int((Ry1-x0)/res[1])+1)*1j,\n",
+    "            Rz0:Rz1:(int((Rz1-x0)/res[1])+1)*1j].reshape(6,-1,order='F').T\n",
+    "\n",
+    "print(all_points[0:5])\n",
+    "\n",
+    "a = np.meshgrid([1,2,3,4],[1,2,3,4],indexing='xy')\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
@@ -423,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
